# energy-efficient-vertical-farms

./: CITATION.cff  CMakeLists.txt  FindCplex.cmake  README.md
data/realistic/: realinst-10-12-52-CD.json  realinst-10-12-76-AC.json  realinst-10-12-76-ACE.json  realinst-10-13-83-ABCF.json  realinst-10-14-89-ABCD.json  realinst-10-15-96-ABF.json  realinst-10-18-115-ABCD.json  realinst-10-18-115-ABE.json  realinst-10-18-63-BE.json  realinst-10-18-79-BCDE.json  realinst-10-19-121-ABF.json  realinst-10-19-121-ADF.json  realinst-10-19-121-AE.json  realinst-10-20-128-ACDF.json  realinst-10-20-88-DF.json  realinst-15-15-64-ABC.json  realinst-15-15-64-ABDE.json  realinst-15-15-64-ADEF.json  realinst-15-17-49-CDF.json  realinst-15-18-76-ACF.json  realinst-15-23-98-A.json  realinst-15-25-106-ABCEF.json  realinst-15-25-106-AF.json  realinst-15-28-119-ACF.json  realinst-15-28-65-F.json  realinst-15-29-123-ADF.json  realinst-15-29-67-BCEF.json  realinst-15-30-88-CDF.json  realinst-15-30-88-DF.json  realinst-20-20-64-ABE.json  realinst-20-22-70-ACDF.json  realinst-20-24-42-CE.json  realinst-20-27-59-DF.json  realinst-20-27-86-ABDF.json  realinst-20-28-21-B.json  realinst-20-29-92-ACE.json  realinst-20-31-54-BE.json  realinst-20-31-99-ABCDEF.json  realinst-20-33-105-ABE.json  realinst-20-37-81-BCDE.json  (+10 more)
data/synthetic/: inst-150-2-14-0.2-1.0.json  inst-150-2-14-0.2-1.5.json  inst-150-2-14-0.2-2.0.json  inst-150-2-14-0.4-1.0.json  inst-150-2-14-0.4-1.5.json  inst-150-2-14-0.4-2.0.json  inst-150-2-14-0.6-1.0.json  inst-150-2-14-0.6-1.5.json  inst-150-2-14-0.6-2.0.json  inst-150-2-16-0.2-1.0.json  inst-150-2-16-0.2-1.5.json  inst-150-2-16-0.2-2.0.json  inst-150-2-16-0.4-1.0.json  inst-150-2-16-0.4-1.5.json  inst-150-2-16-0.4-2.0.json  inst-150-2-16-0.6-1.0.json  inst-150-2-16-0.6-1.5.json  inst-150-2-16-0.6-2.0.json  inst-150-2-18-0.2-1.0.json  inst-150-2-18-0.2-1.5.json  inst-150-2-18-0.2-2.0.json  inst-150-2-18-0.4-1.0.json  inst-150-2-18-0.4-1.5.json  inst-150-2-18-0.4-2.0.json  inst-150-2-18-0.6-1.0.json  inst-150-2-18-0.6-1.5.json  inst-150-2-18-0.6-2.0.json  inst-150-3-14-0.2-1.0.json  inst-150-3-14-0.2-1.5.json  inst-150-3-14-0.2-2.0.json  inst-150-3-14-0.4-1.0.json  (+212 more)
src/: cp_heuristic.cpp  cp_heuristic.h  cp_solver.cpp  cp_solver.h  cp_solver_params.cpp  cp_solver_params.h  greedy_heuristic.cpp  greedy_heuristic.h  gurobi_root_node_cb.h  instance.cpp  instance.h  main.cpp  model1_params.cpp  model1_params.h  model1_save_cont_rel_cb.h  model1_solver.cpp  model1_solver.h  model2_params.cpp  model2_params.h  model2_solution_checker_cb.h  model2_solver.cpp  model2_solver.h  model3_params.cpp  model3_params.h  model3_solver.cpp  model3_solver.h  model_stats.cpp  model_stats.h  solution.cpp  solution.h  task.cpp  task.h  task_type.h  tray.cpp  tray.h
(+1 files in other folders)
