cmake_minimum_required(VERSION 3.12)
project(elevator)

set(CMAKE_CXX_STANDARD 20)
list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(elevator src/main.cpp src/instance.cpp src/instance.h src/task.cpp src/task.h src/task_type.h src/tray.cpp src/tray.h src/model1_solver.h src/model1_params.h src/model1_solver.cpp src/model1_params.cpp src/model_stats.h src/model_stats.cpp src/solution.h src/solution.cpp src/model2_params.h src/model2_params.cpp src/model2_solver.h src/model2_solver.cpp src/model3_solver.h src/model3_solver.cpp src/model3_params.h src/model3_params.cpp src/gurobi_root_node_cb.h src/model1_save_cont_rel_cb.h src/model2_solution_checker_cb.h src/greedy_heuristic.cpp src/greedy_heuristic.h src/cp_heuristic.cpp src/cp_heuristic.h src/cp_solver.h src/cp_solver_params.h src/cp_solver_params.cpp src/cp_solver.cpp)

set(WARNING_OPTIONS             -Wall -Wextra -Werror)
set(GCC_WARNING_OPTIONS         -Wduplicated-cond -Wlogical-op -Wuseless-cast -Wrestrict)
set(ARCH_OPTIONS                -march=native -mtune=native)
set(RELEASE_OPTIONS             -O3)
set(DEBUG_OPTIONS               -O0 -g)
set(GDB_DEBUG_OPTIONS           -ggdb)
set(LINKER_OPTIONS              -flto)

find_package(Gurobi REQUIRED)
find_package(Cplex REQUIRED COMPONENTS ConstraintProgramming)
find_package(Boost REQUIRED)

target_include_directories( elevator SYSTEM PRIVATE "src/nlohmann")
target_include_directories( elevator SYSTEM PRIVATE "src/cxxopts")
target_include_directories( elevator SYSTEM PRIVATE "src/termcolor")
target_include_directories( elevator SYSTEM PRIVATE ${Gurobi_INCLUDE_DIRS})
target_include_directories( elevator SYSTEM PRIVATE ${Cplex_INCLUDE_DIRS})
target_include_directories( elevator SYSTEM PRIVATE ${Cplex_ConstraintProgramming_INCLUDE_DIRS})
target_include_directories( elevator SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
target_compile_options(     elevator PRIVATE ${WARNING_OPTIONS} ${ARCH_OPTIONS})
target_compile_options(     elevator PRIVATE $<$<CXX_COMPILER_ID:GNU>:${GCC_WARNING_OPTIONS}>)
target_compile_options(     elevator PRIVATE $<$<CONFIG:RELEASE>:${RELEASE_OPTIONS}>)
target_compile_options(     elevator PRIVATE $<$<CONFIG:DEBUG>:${DEBUG_OPTIONS}>)
target_compile_options(     elevator PRIVATE $<$<AND:$<CONFIG:DEBUG>,$<CXX_COMPILER_ID:GNU>>:${GDB_DEBUG_OPTIONS}>)
target_link_libraries(      elevator PRIVATE ${LINKER_OPTIONS})
target_link_libraries(      elevator PRIVATE ${Gurobi_LIBRARIES})
target_link_libraries(      elevator PRIVATE ${Cplex_ConstraintProgramming_LIBRARIES})
target_link_libraries(      elevator PRIVATE ${Cplex_LIBRARIES})
target_link_libraries(      elevator PRIVATE pthread dl)